; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_kpi_vfs.c_vfs_setioattr.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_kpi_vfs.c_vfs_setioattr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i32, i32, i32, i32, i32 }
%struct.vfsioattr = type { i32, i32, i32, i32, i32, i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vfs_setioattr(%struct.TYPE_3__* %0, %struct.vfsioattr* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca %struct.vfsioattr*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store %struct.vfsioattr* %1, %struct.vfsioattr** %4, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = icmp eq %struct.TYPE_3__* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %2
  br label %54

8:                                                ; preds = %2
  %9 = load %struct.vfsioattr*, %struct.vfsioattr** %4, align 8
  %10 = getelementptr inbounds %struct.vfsioattr, %struct.vfsioattr* %9, i32 0, i32 8
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 8
  store i32 %11, i32* %13, align 4
  %14 = load %struct.vfsioattr*, %struct.vfsioattr** %4, align 8
  %15 = getelementptr inbounds %struct.vfsioattr, %struct.vfsioattr* %14, i32 0, i32 7
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 7
  store i32 %16, i32* %18, align 4
  %19 = load %struct.vfsioattr*, %struct.vfsioattr** %4, align 8
  %20 = getelementptr inbounds %struct.vfsioattr, %struct.vfsioattr* %19, i32 0, i32 6
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 6
  store i32 %21, i32* %23, align 4
  %24 = load %struct.vfsioattr*, %struct.vfsioattr** %4, align 8
  %25 = getelementptr inbounds %struct.vfsioattr, %struct.vfsioattr* %24, i32 0, i32 5
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 5
  store i32 %26, i32* %28, align 4
  %29 = load %struct.vfsioattr*, %struct.vfsioattr** %4, align 8
  %30 = getelementptr inbounds %struct.vfsioattr, %struct.vfsioattr* %29, i32 0, i32 4
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 4
  store i32 %31, i32* %33, align 4
  %34 = load %struct.vfsioattr*, %struct.vfsioattr** %4, align 8
  %35 = getelementptr inbounds %struct.vfsioattr, %struct.vfsioattr* %34, i32 0, i32 3
  %36 = load i32, i32* %35, align 4
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 3
  store i32 %36, i32* %38, align 4
  %39 = load %struct.vfsioattr*, %struct.vfsioattr** %4, align 8
  %40 = getelementptr inbounds %struct.vfsioattr, %struct.vfsioattr* %39, i32 0, i32 2
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %42, i32 0, i32 2
  store i32 %41, i32* %43, align 4
  %44 = load %struct.vfsioattr*, %struct.vfsioattr** %4, align 8
  %45 = getelementptr inbounds %struct.vfsioattr, %struct.vfsioattr* %44, i32 0, i32 1
  %46 = load i32, i32* %45, align 4
  %47 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %48 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %47, i32 0, i32 1
  store i32 %46, i32* %48, align 4
  %49 = load %struct.vfsioattr*, %struct.vfsioattr** %4, align 8
  %50 = getelementptr inbounds %struct.vfsioattr, %struct.vfsioattr* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 4
  %52 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %53 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %52, i32 0, i32 0
  store i32 %51, i32* %53, align 4
  br label %54

54:                                               ; preds = %8, %7
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
